# Rust-SharedMem-Ocaml

./: .gitignore  LICENSE  README.md
SharedMemCpp/: CMakeLists.txt
SharedMemCpp/examples/: C_SharedMemExample.c  Cpp_SharedMemExample.cpp  SharedMemExample.cpp
SharedMemCpp/include/: SharedMem.hpp
SharedMemCpp/src/: SharedMem.cpp  SharedMemCWrapper.cpp
node/: Cargo.toml
node/src/: main.rs
protocol/: .merlin  dune  protocol.ml
sharedMemCpp/: CMakeLists.txt  install.sh  readme.txt  setup.sh
sharedMemCpp/examples/: C_SharedMemExample.c  Cpp_SharedMemExample.cpp
sharedMemCpp/include/: SharedMem.h  SharedMem.hpp
sharedMemCpp/src/: SharedMem.cpp  SharedMemCWrapper.cpp
sharedMemCpp/src/include/: QueueItem.h  SharedMem.h  SharedMem.hpp
sharedMemMl/: dune  dune-project  install.sh  sharedMem.ml  sharedMem.mli  stubs.cpp  stubs.h
sharedMemMl/sharedMem/: .merlin  dune  dune-project
sharedMemRs/: Cargo.toml  README.txt  build.rs  install.sh  wrapper.h
sharedMemRs/src/: lib.rs
